# SAM2_finger_seg

./: .gitignore  pyproject.toml
sam2/: combined_model.py  finger_seg_sam2.py  sam2_new.py  sam2_new_model.py
sam2/sam2/: build_sam.py  sam2_image_predictor.py
sam2/sam2/configs/sam2.1/: sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml
sam2/test_data/labels/: temp_image_01bde5c2-ba7c-4770-bc70-36970f60e2da.txt  temp_image_0202fc78-eb3b-4d47-b49c-2b6fcf38f04f.txt  temp_image_06756a19-004c-487b-9938-aabc990f7a9e.txt  temp_image_12889362-b214-4363-a51a-6dca49dababd.txt  temp_image_22c94211-a13a-4b08-bd73-66f6e91c4797.txt  temp_image_2d77cdd3-c6fb-443b-803a-df800d61c3f9.txt  temp_image_3c3ac256-6fa6-4ca5-a635-899f5f13fd62.txt  temp_image_41fd9936-a888-4eac-86f6-8a30a90cc2f4.txt  temp_image_59c0c50c-a768-4396-b357-3faf2e685e07.txt  temp_image_5e689322-9edf-4e4e-9106-99edf97c52f9.txt  temp_image_6b5659c1-7c48-4db1-8899-ec62f1b612eb.txt  temp_image_869910a7-b332-475f-a656-0dafa841c1b1.txt  temp_image_8fbee069-72fd-48a2-9b09-2d106a8bce98.txt  temp_image_9a9aa32f-06d5-4e4f-9595-4babfa5b9feb.txt  temp_image_9e20f670-9a61-4e50-acdd-1f4190dc65d0.txt  temp_image_a2cf22f6-7193-46a9-b6f2-d10499f6ff3f.txt  temp_image_a555316b-92c0-4bd6-80d6-1c67ca6012bc.txt  temp_image_a9a95d00-6496-4387-8e1a-c1ce2827ce76.txt  temp_image_b76a4d3b-b721-4098-bafa-2690905c9a6c.txt  temp_image_bc1b9520-d97f-4bd0-bc59-3beb5aa17ce8.txt  temp_image_c94fe46a-db29-4f78-8acb-14b28392b34d.txt  temp_image_e638512e-54fc-4003-bb1e-f5a8fbd7e90f.txt  temp_image_f1fb16ae-7a64-4e98-bace-61d1bcceb8dc.txt
(+3 files in other folders)
