[tool.poetry]
name = "sam2-finger-seg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
segment-anything = "^1.0"
ultralytics = "^8.3.35"
onnxruntime = "^1.20.1"
mediapipe = "^0.10.18"
pymatting = "^1.1.13"
hydra-core = "^1.3.2"
opencv-python = "^4.10.0.84"
rembg = "^2.0.60"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
